[fix]style on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -480,6 +480,7 @@ img::-moz-selection {
     width: 70%;
     /*float: right;*/
     margin-left: 30%;
+    overflow: hidden;
     /*-webkit-transition: all 0.5 ease-in-out;
        -moz-transition: all 0.5 ease-in-out;
         -ms-transition: all 0.5 ease-in-out;
@@ -491,6 +492,7 @@ img::-moz-selection {
     /*margin: 0 10%;*/
     margin-right: 60px;
     padding: 50px 0; 
+    /*overflow: hidden;*/
     /*margin: 0 auto; */
     /*width: 700px;*/
   }
@@ -995,14 +997,18 @@ img::-moz-selection {
 
   .post-list {
     margin: 0;
-    padding: 0;
+    padding: 0 15px 0 10px;
+    width: 100%;
+    box-sizing: border-box;
     list-style-type: none;
     text-align: left; 
     display: inline-block;
   }
   .post-list li {
+    width: 100%;
     margin: 0 0 2.2em 0;
     float: left;
+    overflow: hidden;
     /*display: none;*/
 
     -webkit-box-shadow: 4px 4px 20px #dbdbdb;
@@ -1168,6 +1174,7 @@ img::-moz-selection {
   @-webkit-keyframes list {
     0%{
       opacity:0;
+      filter: alpha(opacity=0);
       -webkit-transform: rotateY(-90deg) translateY(30px);
          -moz-transform: rotateY(-90deg) translateY(30px);
           -ms-transform: rotateY(-90deg) translateY(30px);
@@ -1176,6 +1183,7 @@ img::-moz-selection {
     }
     100%{
       opacity:1;
+      filter: alpha(opacity=100);
       -webkit-transform: rotate(0deg) translateY(0px);
          -moz-transform: rotate(0deg) translateY(0px);
           -ms-transform: rotate(0deg) translateY(0px);
@@ -1187,6 +1195,7 @@ img::-moz-selection {
   @-moz-keyframes list {
     0%{
       opacity:0;
+      filter: alpha(opacity=0);
       -webkit-transform: rotateY(-90deg) translateY(30px);
          -moz-transform: rotateY(-90deg) translateY(30px);
           -ms-transform: rotateY(-90deg) translateY(30px);
@@ -1195,6 +1204,7 @@ img::-moz-selection {
     }
     100%{
       opacity:1;
+      filter: alpha(opacity=100);
       -webkit-transform: rotate(0deg) translateY(0px);
          -moz-transform: rotate(0deg) translateY(0px);
           -ms-transform: rotate(0deg) translateY(0px);
@@ -1206,6 +1216,7 @@ img::-moz-selection {
   @-ms-keyframes list {
     0%{
       opacity:0;
+      filter: alpha(opacity=0);
       -webkit-transform: rotateY(-90deg) translateY(30px);
          -moz-transform: rotateY(-90deg) translateY(30px);
           -ms-transform: rotateY(-90deg) translateY(30px);
@@ -1214,6 +1225,7 @@ img::-moz-selection {
     }
     100%{
       opacity:1;
+      filter: alpha(opacity=100);
       -webkit-transform: rotate(0deg) translateY(0px);
          -moz-transform: rotate(0deg) translateY(0px);
           -ms-transform: rotate(0deg) translateY(0px);
@@ -1225,6 +1237,7 @@ img::-moz-selection {
   @-o-keyframes list {
     0%{
       opacity:0;
+      filter: alpha(opacity=0);
       -webkit-transform: rotateY(-90deg) translateY(30px);
          -moz-transform: rotateY(-90deg) translateY(30px);
           -ms-transform: rotateY(-90deg) translateY(30px);
@@ -1233,6 +1246,7 @@ img::-moz-selection {
     }
     100%{
       opacity:1;
+      filter: alpha(opacity=100);
       -webkit-transform: rotate(0deg) translateY(0px);
          -moz-transform: rotate(0deg) translateY(0px);
           -ms-transform: rotate(0deg) translateY(0px);
@@ -1244,6 +1258,7 @@ img::-moz-selection {
   @keyframes list {
     0%{
       opacity:0;
+      filter: alpha(opacity=0);
       -webkit-transform: rotateY(-90deg) translateY(30px);
          -moz-transform: rotateY(-90deg) translateY(30px);
           -ms-transform: rotateY(-90deg) translateY(30px);
@@ -1252,6 +1267,7 @@ img::-moz-selection {
     }
     100%{
       opacity:1;
+      filter: alpha(opacity=100);
       -webkit-transform: rotate(0deg) translateY(0px);
          -moz-transform: rotate(0deg) translateY(0px);
           -ms-transform: rotate(0deg) translateY(0px);
@@ -1588,10 +1604,12 @@ input[type="tel"]:-ms-input-placeholder {
     width: 80%;
     max-width: none;
     margin: 0 auto; 
+    overflow: hidden;
   }
   .content-wrapper__inner {
     margin-right: 0;
     margin-left: 0; 
+    /*overflow: hidden;*/
   }
 }
 
@@ -1600,9 +1618,15 @@ input[type="tel"]:-ms-input-placeholder {
     padding: 0 5%; 
   }
   .content-wrapper {
-    width: 90%;
+    width: 95%;
     max-width: none;
     margin: 0 auto; 
+  }
+  .content-wrapper__inner {
+    padding-top: 0;
+  }
+  .post-list {
+    padding-top: 40px;
   }
   h1 {
     margin-top: 0;
@@ -1616,6 +1640,9 @@ input[type="tel"]:-ms-input-placeholder {
 
   .panel-subtitle {
     font-size: .6em; 
+  }
+  .post-container {
+    padding: 10px;
   }
  }
 
